--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -19,6 +19,7 @@
     <%= f.label :email %><br />
     <%= f.text_field :email %>
   </div>
+  <% unless current_user.admin? %>
   <div class="filed">
     <%= f.label :password %>
     <%= f.password_field :password %>
@@ -27,6 +28,7 @@
     <%= f.label :password_confirmation, "Confirmation" %>
     <%= f.password_field :password_confirmation %>
   </div>
+  <% end %>
   <div class="actions">
     <%= f.submit %>
   </div>
