--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -18,8 +18,10 @@
     <td><%= user.admin %></td>
     <td><%= user.password_digest %></td>
     <td><%= link_to 'Show', user %></td>
-    <td><%= link_to 'Edit', edit_user_path(user) %></td>
+    <% if current_user?(user) || current_user.admin? %><td><%= link_to 'Edit', edit_user_path(user) %></td><% end %>
+    <% if !current_user?(user) && current_user.admin? %>
     <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    <% end %>
   </tr>
 <% end %>
 </table>
