fixed edit admin function

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -19,7 +19,7 @@
     <%= f.label :email %><br />
     <%= f.text_field :email %>
   </div>
-  <% unless current_user && current_user.admin? %>
+  <% if current_user?(@user)  %>
   <div class="filed">
     <%= f.label :password %>
     <%= f.password_field :password %>
